force-app/main/default/objects/AML_Parameter__c/fields/FATF__c.field-meta.xml
<CustomField>
    <fullName>FATF__c</fullName>
    <label>FATF</label>
    <length>15</length>
    <type>Text</type>
</CustomField>