force-app/main/default/objects/AML_Parameter__c/fields/PEP_Sanctions__c.field-meta.xml
<CustomField>
    <fullName>PEP_Sanctions__c</fullName>
    <label>PEP &amp; Sanctions</label>
    <length>30</length>
    <type>Text</type>
</CustomField>