force-app/main/default/objects/AML_Parameter__c/fields/UAEIEC__c.field-meta.xml
<CustomField>
    <fullName>UAEIEC__c</fullName>
    <label>UAEIEC</label>
    <length>12</length>
    <type>Text</type>
</CustomField>