force-app/main/default/objects/AML_Parameter__c/recordTypes/Beneficial_Owner_Country_of_Citizenship.recordType-meta.xml
<RecordType>
    <fullName>Beneficial_Owner_Country_of_Citizenship</fullName>
    <active>true</active>
    <label>Beneficial Owner Country of Citizenship</label>
</RecordType>