force-app/main/default/objects/AML_Parameter__c/recordTypes/Country.recordType-meta.xml
<RecordType>
    <fullName>Country</fullName>
    <active>true</active>
    <label>Country</label>
</RecordType>