force-app/main/default/objects/AML_Parameter__c/recordTypes/Country_Of_Birth.recordType-meta.xml
<RecordType>
    <fullName>Country_Of_Birth</fullName>
    <active>true</active>
    <label>Country Of Birth</label>
</RecordType>