force-app/main/default/objects/AML_Parameter__c/recordTypes/Customer_s_Country_of_Registration.recordType-meta.xml
<RecordType>
    <fullName>Customer_s_Country_of_Registration</fullName>
    <active>true</active>
    <label>Customer&apos;s Country of Registration</label>
</RecordType>