force-app/main/default/objects/AML_Parameter__c/recordTypes/Industry.recordType-meta.xml
<RecordType>
    <fullName>Industry</fullName>
    <active>true</active>
    <label>Industry</label>
</RecordType>