force-app/main/default/objects/AML_Parameter__c/recordTypes/Industry_AML.recordType-meta.xml
<RecordType>
    <fullName>Industry_AML</fullName>
    <active>true</active>
    <label>Industry(AML)</label>
</RecordType>