force-app/main/default/objects/AML_Parameter__c/recordTypes/Mode_of_Payment.recordType-meta.xml
<RecordType>
    <fullName>Mode_of_Payment</fullName>
    <active>true</active>
    <label>Mode of Payment</label>
</RecordType>