force-app/main/default/objects/AML_Parameter__c/recordTypes/Nationality.recordType-meta.xml
<RecordType>
    <fullName>Nationality</fullName>
    <active>true</active>
    <label>Nationality</label>
</RecordType>