force-app/main/default/objects/AML_Parameter__c/recordTypes/Other_businesses_of_the_client.recordType-meta.xml
<RecordType>
    <fullName>Other_businesses_of_the_client</fullName>
    <active>false</active>
    <label>Other businesses of the client</label>
</RecordType>