force-app/main/default/objects/AML_Parameter__c/recordTypes/Screening_Shareholder.recordType-meta.xml
<RecordType>
    <fullName>Screening_Shareholder</fullName>
    <active>true</active>
    <label>Screening/Shareholder</label>
</RecordType>