force-app/main/default/objects/AML_Parameter__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Type__c</columns>
    <columns>NAME</columns>
    <columns>Parameter_Value__c</columns>
    <columns>Risk_Score__c</columns>
    <columns>Score__c</columns>
    <columns>Rating__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Parameter_Value__c</field>
        <operation>equals</operation>
        <value>United States</value>
    </filters>
    <label>All</label>
</ListView>