force-app/main/default/objects/AML_Parameter__c/listViews/Beneficial_Owner_Country_of_Citizenship.listView-meta.xml
<ListView>
    <fullName>Beneficial_Owner_Country_of_Citizenship</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Parameter_Value__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>AML_Parameter__c.Beneficial_Owner_Country_of_Citizenship</value>
    </filters>
    <label>Beneficial Owner Country of Citizenship</label>
</ListView>