force-app/main/default/objects/AML_Parameter__c/listViews/Business_Work_Location.listView-meta.xml
<ListView>
    <fullName>Business_Work_Location</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Risk_Score__c</columns>
    <columns>Score__c</columns>
    <columns>FATF__c</columns>
    <columns>UAEIEC__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>AML_Parameter__c.Business_Work_Location</value>
    </filters>
    <label>Business / Work Location</label>
</ListView>