force-app/main/default/objects/AML_Parameter__c/listViews/Country.listView-meta.xml
<ListView>
    <fullName>Country</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Risk_Score__c</columns>
    <columns>Score__c</columns>
    <columns>FATF__c</columns>
    <columns>UAEIEC__c</columns>
    <columns>Parameter_Value__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>AML_Parameter__c.Country</value>
    </filters>
    <label>Country</label>
</ListView>