force-app/main/default/objects/AML_Parameter__c/listViews/Customer_s_Country_of_Registration.listView-meta.xml
<ListView>
    <fullName>Customer_s_Country_of_Registration</fullName>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Parameter_Value__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>AML_Parameter__c.Customer_s_Country_of_Registration</value>
    </filters>
    <label>Customer&apos;s Country of Registration</label>
</ListView>