force-app/main/default/objects/AML_Parameter__c/listViews/Financial_Information_Documents.listView-meta.xml
<ListView>
    <fullName>Financial_Information_Documents</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Risk_Score__c</columns>
    <columns>Score__c</columns>
    <columns>FATF__c</columns>
    <columns>UAEIEC__c</columns>
    <columns>Parameter_Value__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>AML_Parameter__c.Financial_Information_Documents</value>
    </filters>
    <label>Financial Information Documents</label>
</ListView>