force-app/main/default/objects/AML_Parameter__c/listViews/Industry.listView-meta.xml
<ListView>
    <fullName>Industry</fullName>
    <columns>NAME</columns>
    <columns>Score__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>AML_Parameter__c.Industry_AML</value>
    </filters>
    <label>Industry</label>
</ListView>