force-app/main/default/objects/AML_Parameter__c/listViews/Mode_of_Payment.listView-meta.xml
<ListView>
    <fullName>Mode_of_Payment</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Risk_Score__c</columns>
    <columns>Score__c</columns>
    <columns>FATF__c</columns>
    <columns>UAEIEC__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>AML_Parameter__c.Mode_of_Payment</value>
    </filters>
    <label>Mode of Payment</label>
</ListView>